Fix up spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,7 +84,7 @@ button.select {
   margin-right: 20px; }
 
 #logo-rw {
-  margin-top: 39px;
+  margin-top: 20px;
   margin-bottom: 18px; }
 
 h1 {
