--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -41,7 +41,7 @@ button.select {
 }
 
 #logo-rw { 
-	margin-top: 39px;
+	margin-top: 20px;
 	margin-bottom:18px;
 }
 
